# vecu-core

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  Cargo.toml  HOWTO_ECU_INTEGRATION.md  IMPLEMENTATION_PLAN.md  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
.github/workflows/: ci.yml
baselayer/: CMakeLists.txt  README.md
baselayer/include/: CanIf.h  CanTp.h  Com.h  ComM.h  Cry.h  CryIf.h  Csm.h  Dcm.h  Dem.h  Det.h  DoIP.h  EcuM.h  EthIf.h  Fee.h  FiM.h  FrIf.h  LinIf.h  MemIf.h  Nm.h  NvM.h  Os.h  PduR.h  Rte.h  SchM.h  Std_Types.h  WdgM.h
baselayer/src/: Base_Entry.c  CanIf.c  CanTp.c  Com.c  ComM.c  Cry.c  CryIf.c  Csm.c  Dcm.c  Dem.c  Det.c  DoIP.c  EcuM.c  EthIf.c  Fee.c  FiM.c  FrIf.c  LinIf.c  MemIf.c  Nm.c  NvM.c  Os.c  PduR.c  Rte.c  SchM.c  WdgM.c
crates/vecu-abi/: Cargo.toml
crates/vecu-abi/include/: vecu_base_context.h  vecu_frame.h  vecu_status.h
crates/vecu-abi/src/: lib.rs
crates/vecu-abi/tests/: abi_compat.c  c_header_compat.rs  vmcal_compile.rs  vmcal_compile_check.c  vmcal_functional.rs  vmcal_functional_test.c
crates/vecu-appl/: Cargo.toml
crates/vecu-appl/src/: bridge.rs  context.rs  lib.rs
crates/vecu-appl/tests/: baselayer_integration.rs  bridge_integration.rs  comstack_integration.rs  crypto_integration.rs  diag_integration.rs  hsm_e2e_integration.rs  mock_appl.c  mock_appl_minimal.c  mock_base.c  transport_integration.rs
crates/vecu-hsm/: Cargo.toml
crates/vecu-hsm/src/: lib.rs
crates/vecu-loader/: Cargo.toml
crates/vecu-loader/src/: lib.rs  main.rs
crates/vecu-loader/tests/: can_e2e.rs
crates/vecu-runtime/: Cargo.toml
crates/vecu-runtime/src/: lib.rs  opensut.rs
crates/vecu-shm/: Cargo.toml
crates/vecu-shm/src/: lib.rs
crates/vecu-silkit/: Cargo.toml
crates/vecu-silkit/src/: adapter.rs  bus.rs  lib.rs  sys.rs
docs/: Level3_vECU_Acceptance_Record.md  PROJECT_DESCRIPTION.md  arxml-config-concept.md
docs/adr/: ADR-001-level3-vecu-architecture.md  ADR-002-virtual-mcal-scope-guarantees.md  ADR-003-vhsm-integration-guarantees.md  ADR-004-os-semantics-mapping.md  ADR-005-build-toolchain-integration.md  ADR-006-validation-acceptance-criteria.md  ADR-007-vtt-independence-refactoring.md
examples/openbsw_poc/: CMakeLists.txt  README.md  config.yaml
examples/openbsw_poc/include/: openbsw_shim.h
examples/openbsw_poc/include/vecu/: VecuCanTransceiver.h
examples/openbsw_poc/include/vecu_platform/: etl_profile.h
examples/openbsw_poc/include/vecu_platform/async/: Lock.h  ModifiableLock.h  Types.h
examples/openbsw_poc/include/vecu_platform/bsp/timer/: SystemTimer.h
examples/openbsw_poc/include/vecu_platform/interrupts/: suspendResumeAllInterrupts.h
examples/openbsw_poc/src/: VecuCanTransceiver.cpp  openbsw_bridge.cpp  openbsw_shim.c  openbsw_stubs.c
examples/sample_ecu/: CMakeLists.txt  README.md  config.yaml
examples/sample_ecu/include/: Rte_SwcActuator.h  Rte_SwcDiag.h  Rte_SwcSensor.h
examples/sample_ecu/src/: Appl_Entry.c  SwcActuator.c  SwcDiag.c  SwcSensor.c
examples/zc_d_vecu/: CMakeLists.txt  README.md  bsw_sources.cmake  configured_modules.cmake  discover_bsw_sources.sh  discover_modules.sh  gen_mcal_memmap.sh  gen_stub.sh  gen_stubs_round2.sh  gen_stubs_round3.sh  gen_stubs_round4.sh  gendata_vtt_sources.txt  generate_memmap_stubs.sh  generate_missing_stubs.sh  vecu_appl_stubs.c  vecu_bsw_scheduler.c  vecu_bsw_scheduler.h  vecu_det_logging.c  vecu_microsar_bridge.c
examples/zc_d_vecu/platform/: ADC_MemMap.h  Appl_DoIP.h  Appl_Time.h  Arti_MemMap.h  AvTp_MemMap.h  BmcLibWrapper_MemMap.h  BswInit_Cfg.h  BswInit_Compiler_Cfg.h  BswM_MemMap.h  CANoeApi.h  CANoeEmuProcessor.h  CanIf_MemMap.h  CanNm_MemMap.h  CanSM_MemMap.h  CanTSyn_MemMap.h  CanTp_MemMap.h  Can_30_Core_Cfg.h  Can_30_Core_MemMap.h  Can_MemMap.h  Cdd_SomeIpTp.h  ComM_MemMap.h  Com_MemMap.h  Compiler_Cfg_MSR4_MPP_RH850_U2B_GreenHills.h  Crc_MemMap.h  CryIf_MemMap.h  Crypto_30_Hwa_MemMap.h  Crypto_30_LibCv_MemMap.h  Crypto_30_vHsm_MemMap.h  DcaRemoteVdpRte_MemMap.h  Dcm_MemMap.h  Dem_MemMap.h  Dio_30_Vtt.h  Dio_MemMap.h  Dlt_MemMap.h  DoIP_MemMap.h  E2EXf_MemMap.h  E2E_MemMap.h  EcuM_MemMap.h  EthIf_MemMap.h  EthSM_MemMap.h  (+159 more)
os_mapping/: CMakeLists.txt
os_mapping/include/: Os_Mapping.h  Os_Task.h
os_mapping/src/: Os_Mapping.c
target-microsar/: CMakeLists.txt  README.md
target-microsar/include/: vecu_microsar_mcal_bridge.h  vecu_microsar_shim.h
target-microsar/src/: vecu_microsar_mcal_bridge.c  vecu_microsar_shim.c
target-openbsw/: CMakeLists.txt  README.md
target-openbsw/include/: vecu_openbsw_shim.h  vecu_openbsw_transport.h
target-openbsw/src/: vecu_openbsw_shim.cpp  vecu_openbsw_transport.cpp
tools/: arxml2vmcal.py  generate_appl_stubs.py  generate_memmap_stubs.py
tools/examples/: sample_mcal.arxml
vecu-platform/: CMakeLists.txt  README.md
vecu-platform/include/: CanTrcv_GeneralTypes.h  Can_GeneralTypes.h  ComStack_Types.h  Compiler.h  Compiler_Cfg.h  Crypto_GeneralTypes.h  Eth_GeneralTypes.h  Fr_GeneralTypes.h  Lin_GeneralTypes.h  MemIf_Types.h  MemMap.h  Os.h  Os_Compiler_Cfg.h  Os_Hal_Cfg.h  Platform_Types.h  Std_Types.h  VX1000.h  vecu_prefix.h
vhsm_adapter/: CMakeLists.txt
vhsm_adapter/include/: Crypto_30_vHsm.h
vhsm_adapter/src/: Crypto_30_vHsm.c
vmcal/: CMakeLists.txt
vmcal/include/: Adc.h  Can.h  Can_GeneralTypes.h  ComStack_Types.h  Dio.h  Eth.h  Eth_GeneralTypes.h  Fls.h  Fr.h  Gpt.h  Icu.h  Lin.h  Mcu.h  MemIf_Types.h  Port.h  Pwm.h  Spi.h  VMcal_Context.h  Wdg.h
vmcal/src/: Adc.c  Can.c  Dio.c  Eth.c  Fls.c  Fr.c  Gpt.c  Icu.c  Lin.c  Mcu.c  Port.c  Pwm.c  Spi.c  VMcal_Context.c  Wdg.c
