[workspace]
resolver = "2"
members = [
    "crates/vecu-abi",
    "crates/vecu-shm",
    "crates/vecu-runtime",
    "crates/vecu-appl",
    "crates/vecu-hsm",
    "crates/vecu-silkit",
    "crates/vecu-loader",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rettde/vecu-core"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Dynamic loading
libloading = "0.8"

# Shared memory
memmap2 = "0.9"

# Utilities
bytemuck = { version = "1", features = ["derive", "min_const_generics"] }
static_assertions = "1"

# Crypto (SHE‑compatible HSM)
aes = "0.8"
cbc = "0.1"
cmac = "0.7"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }

# Testing
proptest = "1"
cc = "1"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
# Selectively allow common pedantic false-positives
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
