[package]
name = "vecu-abi"
description = "ABI definitions and shared types for the vECU execution system"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bytemuck = { workspace = true }
serde = { workspace = true }
static_assertions = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
cc = { workspace = true }

[lints]
workspace = true
