[package]
name = "vecu-appl"
description = "ECU application module implementing user-defined logic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vecu-abi = { path = "../vecu-abi" }
libloading = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
cc = { workspace = true }

[lints]
workspace = true
