[package]
name = "vecu-shm"
description = "Versioned, offset-based shared memory for vECU inter-module communication"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
vecu-abi = { path = "../vecu-abi" }
bytemuck = { workspace = true }
memmap2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"

[lints]
workspace = true
